# survey-service

./: README.md  pyproject.toml
src/config/: settings.py  urls.py
src/surveys/: admin.py  forms.py  models.py  urls.py  views.py
src/surveys/migrations/: 0001_initial.py
src/surveys/templates/: base.html  homepage.html
src/surveys/templates/auth/: login.html  signup.html
src/surveys/templates/survey/: detail.html  list.html  list_test.html  results.html  start.html  submit.html
